--- a/src/static/sass/_custom-variables.scss
+++ b/src/static/sass/_custom-variables.scss
@@ -25,7 +25,7 @@ $blue:                   lighten($blue-base, 33.5%) !default;
 $blue-light:             lighten($blue-base, 46.7%) !default;
 $blue-lighter:           lighten($blue-base, 93.5%) !default;
 
-$red-base:              #671916 !default;
+$red-base:              #581b15 !default;
 $red-darker:            lighten($red-base, 13.5%) !default;
 $red-dark:              lighten($red-base, 20%) !default;
 $red:                   lighten($red-base, 33.5%) !default;
