--- a/src/static/sass/_blog.scss
+++ b/src/static/sass/_blog.scss
@@ -38,8 +38,13 @@ hr {
   background-image: url('../img/bg_blue_black.png');
 
   &.has-error {
-    background-image: none;
-    background-color: $red;
+    background-image: url('../img/bg_red_black.png');
+
+    & h1,
+    & p {
+      color: $red-base;
+    }
+
 
     & .btn-primary {
       background-color: $red-dark;
@@ -72,7 +77,7 @@ hr {
     h1 {
       margin: 0;
     }
-    
+
     hr {
       border-color: $gray-darker;
 
