--- a/src/templates/login/page.html
+++ b/src/templates/login/page.html
@@ -6,7 +6,7 @@
 
 {% block jumbotron %}
   <div class="row text-center">
-    <div class="col-sm-12">
+    <div class="col-xs-12">
       <h1 class="headline">Log in</h1>
       <p>Just one more step before to post!</p>
     </div>
@@ -15,9 +15,9 @@
 
 {% block content %}
   <div class="row">
-    <div class="col-sm-4 col-sm-offset-4">
+    <div class="col-xs-12 col-sm-4 col-sm-offset-4">
       <p>Use your credentials to connect to your account</p>
-      
+
       {% include("commons/form.html") %}
     </div>
   </div>
