--- a/src/templates/comments/edit.html
+++ b/src/templates/comments/edit.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 
 {% block title %}
-  Edit your comment
+  Edit comment
 {% endblock%}
 
 {% block jumbotron %}
   <div class="row text-center">
-    <div class="col-sm-12">
+    <div class="col-xs-12">
       <h1 class="headline">Edit comment</h1>
     </div>
   </div>
