--- a/src/templates/commons/navbar.html
+++ b/src/templates/commons/navbar.html
@@ -3,25 +3,33 @@
     <div class="container">
 
       <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
         <a class="navbar-brand" href="/">Blog</a>
       </div>
 
-      <!-- Buttons -->
-      {% if user %}
-        <a href="/posts/add" class="btn btn-primary navbar-btn"><i class="fa fa-plus"></i> New Post</a>
-      {% else %}
-        <a href="/register" class="btn btn-primary navbar-btn pull-right">Sign up</a>
-      {% endif %}
-
-      <ul class="nav navbar-nav navbar-right">
+      <div class="collapse navbar-collapse" id="navbar-collapse">
+        <!-- Buttons -->
         {% if user %}
-          <li><a href="/posts"><i class="fa fa-th-list"></i> Posts</a></li>
-          <li><a href="/posts"><i class="fa fa-user-circle"></i> {{ user.username }}</a></li>
-          <li><a href="/logout"><i class="fa fa-sign-out"></i> Logout</a></li>
+          <a href="/posts/add" class="btn btn-primary navbar-btn"><i class="fa fa-plus"></i> New Post</a>
         {% else %}
-          <li><a href="/login">Log in</a></li>
+          <a href="/register" class="btn btn-primary navbar-btn pull-right">Sign up</a>
         {% endif %}
-      </ul>
+
+        <ul class="nav navbar-nav navbar-right">
+          {% if user %}
+            <li><a href="/posts"><i class="fa fa-th-list"></i> Posts</a></li>
+            <li><a href=""><i class="fa fa-user-circle"></i> {{ user.username }}</a></li>
+            <li><a href="/logout"><i class="fa fa-sign-out"></i> Logout</a></li>
+          {% else %}
+            <li><a href="/login">Log in</a></li>
+          {% endif %}
+        </ul>
+      </div>
 
     </div>
   </nav>
