--- a/src/templates/commons/posts/list.html
+++ b/src/templates/commons/posts/list.html
@@ -2,16 +2,14 @@
   {% if posts %}
     {% for post in posts %}
     <!-- START Post -->
-      <div class="col-sm-6 post">
+      <div class="col-xs-12 col-sm-6 post">
         <div class="post-summarize">
           {% if user and post.parent().key() == user.key() %}
             <!-- START Admin Post -->
             <div class="post-actions">
               <div id="alert-{{post.key()}}" class="alert alert-danger alert-dismissible fade in" role="alert" style="display: none;">
                 <p class="h4">Are you sure you want to delete this post?</p>
-                <p>
-                  There won't be a way back!
-                </p>
+                <p>It won't be possible to get it back</p>
                 <p class="text-right"> <a href="/posts/delete/{{post.key()}}" class="btn btn-danger">Yes, delete</a>
                    <button type="button" class="btn btn-default" onclick="$('#alert-{{post.key()}}').hide()">Cancel</button>
                 </p>
@@ -36,7 +34,9 @@
           <p class="small">
             <i class="fa fa-heart-o"></i> {{ nb_likes[post.key()] }} like{{'s' if nb_likes[post.key()] > 1 }} ·
             <i class="fa fa-comments-o"></i> {{ nb_comments[post.key()] }} comment{{'s' if nb_comments[post.key()] > 1 }}
-            <span class="pull-right"><i class="fa fa-user-circle"></i> {{ post.parent().username }}</span>
+          </p>
+          <p class="text-right small">
+            <i class="fa fa-user-circle"></i> {{ post.parent().username }}
           </p>
 
           {% if user and post.parent().key() == user.key() %}
@@ -55,7 +55,7 @@
     {% endfor %}
   {% else %}
   <!-- NO POST -->
-    <div class="col-sm-12 text-center">
+    <div class="col-xs-12 text-center">
       <p class="h1">There is no post!</p>
       <p>Why don't you <a href="/posts/add">write one</a> ?</p>
     </div>
