--- a/src/templates/commons/posts/view.html
+++ b/src/templates/commons/posts/view.html
@@ -1,14 +1,14 @@
 {% if post %}
   <div class="row">
-    <div class="col-sm-10 col-sm-offset-1 post">
-      
+    <div class="col-xs-12 col-sm-10 col-sm-offset-1 post">
+
         <div class="post-content">
           <!-- Post -->
           {{ post.content|nl2br }}
 
           <!-- Author -->
           <div class="post-author text-right">
-            <h2><i class="fa fa-user-circle-o"></i> {{ post.parent().username }}</h2>
+            <h2><i class="fa fa-user-circle-o"></i> <a href="/posts/user/{{post.parent().key()}}">{{ post.parent().username }}</a></h2>
             <p><span class="small">Member since {{ post.parent().creation_date.strftime("%B %Y") }} </span></p>
           </div>
 
