--- a/src/templates/home/page.html
+++ b/src/templates/home/page.html
@@ -9,7 +9,7 @@
 
     {% if not user %}
     <!-- USER LOGGED OUT -->
-      <div class="col-sm-7">
+      <div class="col-xs-12 col-sm-7">
         <h1 class="headline">Lorem Ipsum</h1>
 
         <p>
@@ -19,13 +19,13 @@
         <p class="text-right"><a class="btn btn-primary btn-lg" href="/register" role="button">Sign up</a></p>
       </div>
 
-      <div class="col-sm-5 text-center">
+      <div class="col-sm-5 hidden-xs text-center">
         <i class="fa fa-paper-plane fa-20x" aria-hidden="true"></i>
       </div>
 
     {% else %}
     <!-- USER LOGGED IN -->
-      <div class="col-sm-12 text-center">
+      <div class="col-xs-12 text-center">
         <h1 class="headline">Discover</h1>
 
         <p>What people have to say to the world</p>
@@ -37,7 +37,7 @@
 
 {% block content %}
   <div class="row">
-    <div class="col-sm-12">
+    <div class="col-xs-12">
       <h2>Latest posts</h2>
 
       {% include "commons/posts/list.html" %}
