--- a/src/templates/posts/edit.html
+++ b/src/templates/posts/edit.html
@@ -6,7 +6,7 @@
 
 {% block jumbotron %}
   <div class="row text-center">
-    <div class="col-sm-12">
+    <div class="col-xs-12">
       <h1 class="headline">Edit Post</h1>
     </div>
   </div>
@@ -14,7 +14,7 @@
 
 {% block content %}
 <div class="row">
-  <div class="col-sm-10 col-sm-offset-1">
+  <div class="col-xs-12 col-sm-10 col-sm-offset-1">
     <p>
       <a href="/posts/view/{{post.key()}}" class="btn btn-primary">
         <i class="fa fa-angle-left"></i> Back to post
