--- a/src/templates/posts/view.html
+++ b/src/templates/posts/view.html
@@ -6,10 +6,10 @@
 
 {% block jumbotron %}
   <div class="row text-center">
-    <div class="col-sm-12">
+    <div class="col-xs-12">
       <h1 class="headline">{{ post.title }}</h1>
       <hr>
-      <p><i class="fa fa-calendar-o"></i> {{ post.creation_date.strftime("%A %d %B %Y") }}</p>
+      <p class="small"><i class="fa fa-calendar-o"></i> {{ post.creation_date.strftime("%A %d %B %Y") }}</p>
     </div>
   </div>
 {% endblock %}
@@ -18,7 +18,7 @@
   {% include "commons/posts/view.html" %}
   <hr>
   <div class="row">
-    <div class="col-sm-10 col-sm-offset-1">
+    <div class="col-xs-12 col-sm-10 col-sm-offset-1">
       {% include "commons/comments/list.html" %}
 
       {% if user %}
