--- a/src/templates/signup/page.html
+++ b/src/templates/signup/page.html
@@ -6,7 +6,7 @@
 
 {% block jumbotron %}
   <div class="row text-center">
-    <div class="col-sm-12">
+    <div class="col-xs-12">
       <h1 class="headline">Sign up</h1>
       <p>Just one more step before to post!</p>
     </div>
@@ -15,7 +15,7 @@
 
 {% block content %}
   <div class="row">
-    <div class="col-sm-4 col-sm-offset-4">
+    <div class="col-xs-12 col-sm-4 col-sm-offset-4">
       <p>Please fill-in this form to create your account.</p>
 
       {% include("commons/form.html") %}
