--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Blog | {% block title %}{% endblock %}</title>
+    <title>UBlog | {% block title %}{% endblock %}</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700|Roboto:300,400" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/font-awesome.css">
     <link rel="stylesheet" href="/static/css/master.css">
