Add test credentials on login page

--- a/src/templates/login/page.html
+++ b/src/templates/login/page.html
@@ -19,6 +19,8 @@
       <p>Use your credentials to connect to your account</p>
 
       {% include("commons/form.html") %}
+      
+      <p class="alert alert-info">Test credentials : <em>test@test.ca / test</em></p>
     </div>
   </div>
 {% endblock %}
